--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -1,1 +1,6 @@
+<%= link_to("ログアウト", destroy_user_session_path, method: :delete) %>
+<%= link_to("ユーザー情報編集", edit_user_registration_path ) %>
+
+
+
 Hello, world!
