--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -1,6 +1,4 @@
 <%= link_to("ログアウト", destroy_user_session_path, method: :delete) %>
-<%= link_to("ユーザー情報編集", edit_user_registration_path ) %>
+<%= link_to("ユーザー情報編集", edit_user_path(current_user)) %>
 
-
-
-Hello, world!
+こんにちは、<%= "#{current_user.name}さん！"%>
