--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,8 +3,8 @@
     <div class='account-page__inner--left account-page__header'>
       <h2>Edit Account</h2>
       <h5>アカウントの編集</h5>
-      <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'btn'%>
-      <%= link_to "チャットページに戻る", :back, class: 'btn'%>
+      <%= link_to "退会する", user_registration_path, method: :delete %>
+      <%= link_to "トップページに戻る", :back, class: 'btn'%>
     </div>
     <div class='account-page__inner--right user-form'>
       <%= form_with model: current_user, local: true do |f|%>
