--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -3,6 +3,6 @@
     <%= render partial: "side_bar" %>
   </div>
   <div class="main_view">
-    <%= render partial: "main_view" %>
+    <%= render partial: "main_view_index" %>
   </div>
 </div>
