characters/newビュー作成

--- a/app/views/characters/_side_bar.html.erb
+++ b/app/views/characters/_side_bar.html.erb
@@ -5,7 +5,13 @@
 </div>
 
 <div class="side_bar_categories">
-  会社
+  <div>
+    <%= link_to("新規登録", new_character_path) %>
+  </div>
+
+  <div>
+    会社
+  </div>
   <%# <% current_user.categories.each do |category| %>
     <%# <div class="category"> %>
       <%# <div class="category_name">
