ActiveStorageによる画像保存機能の作成

--- a/app/views/characters/_main_view_new.html.erb
+++ b/app/views/characters/_main_view_new.html.erb
@@ -22,7 +22,8 @@
       <%= f.text_field :name, autofocus: true %>
     </div>
     <div class='image'>
-      画像選択
+      画像
+      <%= f.file_field :image, id:"message_image" %>
     </div>
     <div class='category'>
       カテゴリー選択
