--- a/app/views/characters/_main_view_new.html.erb
+++ b/app/views/characters/_main_view_new.html.erb
@@ -23,7 +23,7 @@
     </div>
     <div class='image'>
       画像
-      <%= f.file_field :image, id:"message_image" %>
+      <%= f.file_field :image, id:"character_image" %>
     </div>
     <div class='category'>
       カテゴリー選択
