--- a/app/assets/stylesheets/characters.css
+++ b/app/assets/stylesheets/characters.css
@@ -41,4 +41,71 @@
 }
 
 /* メインコンテンツ */
+.characters {
+  padding: 50px 0;
+}
+
+.characters_wrapper {
+  margin: 0 auto;
+  width: calc(100% - 100px);
+  /* background-color: #ddd; */
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.character {
+  width: 540px;
+  height: 180px;
+  display: flex;
+  border: 2px solid #4A154B;
+  border-radius: 10px;
+  margin: 0 20px 20px 0;
+  box-shadow: 0px 0px 5px #888;
+}
+
+.character_info {
+  width: 160px;
+  padding-top: 20px;
+  text-align: center;
+  border-right: 2px solid #4A154B;
+}
+
+.character_name {
+  font-weight: bold;
+}
+
+.character_image img {
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+}
+
+.character_topic {
+  width: 380px;
+  height: 176px;
+  font-size: 14px;
+}
+
+.past_topic {
+  width: 100%;
+  height: 50%;
+  padding: 5px;
+  border-bottom: 1px solid #4A154B;
+  position: relative;
+}
+
+.create_date {
+  font-size: 13px;
+  position: absolute;
+  top: 5px;
+  right: 7px;
+}
+
+.future_topic {
+  width: 100%;
+  height: 50%;
+  padding: 5px;
+  border-top: 1px solid #4A154B;
+}
+
 
