--- a/app/views/characters/_main_view_index.html.erb
+++ b/app/views/characters/_main_view_index.html.erb
@@ -27,6 +27,10 @@
             <% end %>
           </div>
           <div class="character_name"><%= character.name %></div>
+          <div class="detail">
+            <%= "詳細編集" %><br>
+            <%= "削除" %>
+          </div>
         </div>
         <div class="character_topic">
           <div class="past_topic">
