characters/indexビュー編集

--- a/app/views/characters/_main_view_index.html.erb
+++ b/app/views/characters/_main_view_index.html.erb
@@ -28,7 +28,7 @@
           </div>
           <div class="character_name"><%= character.name %></div>
           <div class="detail">
-            <%= "詳細編集" %><br>
+            <%= link_to("詳細編集", edit_character_path(character)) %><br>
             <%= "削除" %>
           </div>
         </div>
