--- a/app/views/characters/_main_view_new.html.erb
+++ b/app/views/characters/_main_view_new.html.erb
@@ -15,7 +15,7 @@
 </div>
 
 <div class="new_character">
-  <%= form_with model: @character, local: true do |f|%>
+  <%= form_with model: @character_topic, url: characters_path,local: true do |f|%>
     <%= render "error_messages", model: f.object %>
     <div class='field'>
       名前<br>
@@ -30,11 +30,23 @@
     </div>
     <div class='field'>
       URL<br>
-      <%= f.text_field :url %>
+      <%= f.url_field :url %>
     </div>
     <div class='field'>
       特徴、プロフィール<br>
       <%= f.text_area :describe %>
+    </div>
+    <div class='field'>
+      話した事<br>
+      <%= f.text_area :past_topic %>
+    </div>
+    <div class='field'>
+      話した日<br>
+      <%= f.datetime_field :created_date %>
+    </div>
+    <div class='field'>
+      話したい事<br>
+      <%= f.text_area :future_topic %>
     </div>
     <div class='actions'>
       <%= f.submit "登録", class: 'btn'%>
