--- a/app/assets/stylesheets/characters.css
+++ b/app/assets/stylesheets/characters.css
@@ -105,7 +105,7 @@
 .past_topic {
   width: 100%;
   height: 50%;
-  padding: 5px;
+  padding: 7px;
   border-bottom: 1px solid #4A154B;
   position: relative;
 }
@@ -120,11 +120,23 @@
 .future_topic {
   width: 100%;
   height: 50%;
-  padding: 5px;
+  padding: 7px;
   border-top: 1px solid #4A154B;
 }
 
 .detail {
-  /* display: none; */
   margin-top: 30px;
+}
+
+.topic_form {
+  height: 100%;
+  /* padding: 4px 0 0 4px; */
+}
+
+.topic_input {
+  resize: none;
+  width: 80%;
+  height: 100%;
+  padding: 3px 5px;
+  font-size: 15px;
 }
