--- a/app/views/characters/_main_view_index.html.erb
+++ b/app/views/characters/_main_view_index.html.erb
@@ -37,8 +37,8 @@
             <% if character.past_topics[0] %>
               <%= form_with model:character.past_topics[0], url: past_topic_path(character.past_topics[0]), class: "topic_form", local: true do |f| %>
                 <%= f.hidden_field :character_id, value: character.id %>
-                <%= f.text_area :past_topic, class: "topic_input" %>
-                <%= f.submit "更新"%>
+                <%= f.text_area :past_topic, class: "topic_input", disabled: true %>
+                <%= f.submit "更新" %>
               <% end %>
             <% end %>
             <div class="create_date">6/18(日)</div>
@@ -47,8 +47,8 @@
             <% if character.future_topics[0] %>
               <%= form_with model:character.future_topics[0], url: future_topic_path(character.future_topics[0]), class: "topic_form", local: true do |f| %>
                 <%= f.hidden_field :character_id, value: character.id %>
-                <%= f.text_area :future_topic, class: "topic_input" %>
-                <%= f.submit "更新"%>
+                <%= f.text_area :future_topic, class: "topic_input" , disabled: true %>
+                <%= f.submit "更新" %>
               <% end %>
             <% end %>
           </div>
