--- a/app/assets/stylesheets/characters.css
+++ b/app/assets/stylesheets/characters.css
@@ -114,7 +114,7 @@
   font-size: 13px;
   position: absolute;
   top: 5px;
-  right: 7px;
+  right: 10px;
 }
 
 .future_topic {
@@ -135,8 +135,12 @@
 
 .topic_input {
   resize: none;
-  width: 80%;
+  width: 81%;
   height: 100%;
   padding: 3px 5px;
-  font-size: 15px;
+  font-size: 14px;
+}
+
+.topic_submit {
+  display: block;
 }
