--- a/app/views/characters/_main_view_index.html.erb
+++ b/app/views/characters/_main_view_index.html.erb
@@ -38,9 +38,9 @@
               <%= form_with model:character.past_topics[0], url: past_topic_path(character.past_topics[0]), class: "topic_form", data: character.past_topics[0].id, local: true do |f| %>
                 <%= f.hidden_field :character_id, value: character.id %>
                 <%= f.text_area :past_topic, class: "topic_input past_topic_input", disabled: true %>
+                <%= f.date_field :created_date, class: "created_date" %>
               <% end %>
             <% end %>
-            <div class="create_date">6/18(日)</div>
           </div>
           <div class="future_topic">
             <% if character.future_topics[0] %>
