characters/indexビュー編集

--- a/app/views/characters/_main_view_index.html.erb
+++ b/app/views/characters/_main_view_index.html.erb
@@ -14,8 +14,8 @@
   </div>
 </div>
 
-<div class="characters">
-  <div class="characters_wrapper">
+<div class="main_contents">
+  <div class="main_contents_wrapper">
     <% @characters.each do |character| %>
       <div class="character">
         <div class="character_info">
@@ -33,20 +33,20 @@
           </div>
         </div>
         <div class="character_topic">
-          <div class="past_topic">
-            <% if character.past_topics[0] %>
-              <%= form_with model:character.past_topics[0], url: past_topic_path(character.past_topics[0]), class: "topic_form", data: character.past_topics[0].id, local: true do |f| %>
-                <%= f.hidden_field :character_id, value: character.id %>
-                <%= f.text_area :past_topic, class: "topic_input past_topic_input", disabled: true %>
-                <%= f.date_field :created_date, class: "created_date" %>
-              <% end %>
-            <% end %>
-          </div>
           <div class="future_topic">
             <% if character.future_topics[0] %>
               <%= form_with model:character.future_topics[0], url: future_topic_path(character.future_topics[0]), class: "topic_form", data: character.future_topics[0].id, local: true do |f| %>
                 <%= f.hidden_field :character_id, value: character.id %>
                 <%= f.text_area :future_topic, class: "topic_input future_topic_input" , disabled: true %>
+              <% end %>
+            <% end %>
+          </div>
+          <div class="past_topic">
+            <% if character.past_topics[0] %>
+              <%= form_with model:character.past_topics[0], url: past_topic_path(character.past_topics[0]), class: "topic_form", data: character.past_topics[0].id, local: true do |f| %>
+                <%= f.hidden_field :character_id, value: character.id %>
+                <%= f.date_field :created_date, class: "created_date" %>
+                <%= f.text_area :past_topic, class: "topic_input past_topic_input", disabled: true %>
               <% end %>
             <% end %>
           </div>
