--- a/app/views/characters/_main_view_edit.html.erb
+++ b/app/views/characters/_main_view_edit.html.erb
@@ -4,7 +4,7 @@
       新規登録
     </div>
     <div class="category_describe">
-      人のデータを登録してください。人のデータを登録してください。人のデータを登録してください。
+      人のデータを編集してください。人のデータを編集してください。人のデータを編集してください。人のデータを編集してください。
     </div>
   </div>
   <div class="main_top_right">
@@ -13,33 +13,57 @@
     <%= current_user.name %>
   </div>
 </div>
+<div class="main_contents">
+  <div class="main_contents_wrapper">
+    <div class="edit_data">
+      <%= form_with model: @character, local: true, class: "edit_profile_form" do |f|%>
+        <%= render "error_messages", model: f.object %>
+        <div class='field'>
+          名前<br>
+          <%= f.text_field :name, autofocus: true %>
+        </div>
+        <div class='image'>
+          画像
+          <%= f.file_field :image, id:"character_image" %>
+        </div>
+        <div class='category'>
+          カテゴリー選択
+        </div>
+        <div class='field'>
+          URL<br>
+          <%= f.text_field :url %>
+        </div>
+        <div class='field'>
+          特徴、プロフィール<br>
+          <%= f.text_area :describe %>
+        </div>
+        <div class='actions'>
+          <%= f.submit "更新", class: 'btn'%>
+        </div>
+        <%= link_to("データ削除", character_path(@character), method: :delete) %>
+      <% end %>
 
-<div class="edit_character">
-  <%= form_with model: @character, local: true do |f|%>
-    <%= render "error_messages", model: f.object %>
-    <div class='field'>
-      名前<br>
-      <%= f.text_field :name, autofocus: true %>
+      <div class="edit_topic_form">
+        <%= form_with model: @latest_future_topic, class: "edit_future_topic", local: true do |f| %>
+          <div class='field'>
+            話したい事<br>
+            <%= f.text_area :future_topic %>
+          </div>
+        <% end %>
+
+        <div class="edit_past_topic">
+          <button type="button" id="new_topic_btn" data-character_id="<%= @character.id %>">new</button>
+            話した事<br>
+          <div id="past_topics">
+            <% @past_topics.each do |past_topic| %>
+              <%= form_with model: past_topic, class: "topic_form", data: past_topic.id, local: true do |f| %>
+                  <%= f.date_field :created_date %>              
+                  <%= f.text_area :past_topic, class: "past_topic_input" %>
+              <% end %>
+            <% end %>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class='image'>
-      画像
-      <%= f.file_field :image, id:"character_image" %>
-    </div>
-    <div class='category'>
-      カテゴリー選択
-    </div>
-    <div class='field'>
-      URL<br>
-      <%= f.text_field :url %>
-    </div>
-    <div class='field'>
-      特徴、プロフィール<br>
-      <%= f.text_area :describe %>
-    </div>
-    <div class='actions'>
-      <%= f.submit "更新", class: 'btn'%>
-    </div>
-  <% end %>
-  <br>
-  <%= link_to("データ削除", character_path(@character), method: :delete) %>
+  </div>
 </div>
