--- a/app/assets/stylesheets/characters.css
+++ b/app/assets/stylesheets/characters.css
@@ -45,13 +45,13 @@
 }
 
 /* メインコンテンツ */
-.characters {
+.main_contents {
   padding: 50px 0;
   height: calc(100vh - 100px);
   overflow: auto;
 }
 
-.characters_wrapper {
+.main_contents_wrapper {
   margin: 0 auto;
   width: calc(100% - 100px);
   /* background-color: #ddd; */
@@ -59,6 +59,7 @@
   flex-wrap: wrap;
 }
 
+/* トップページ */
 .character {
   width: 540px;
   height: 180px;
@@ -102,14 +103,14 @@
   font-size: 14px;
 }
 
-.past_topic {
+.future_topic {
   width: 100%;
   height: 50%;
   padding: 7px;
   border-bottom: 1px solid #4A154B;
 }
 
-.future_topic {
+.past_topic {
   width: 100%;
   height: 50%;
   padding: 7px;
@@ -144,3 +145,34 @@
 .topic_submit {
   display: block;
 }
+
+
+/* データ編集ページ */
+
+.edit_data {
+  width: 1100px;
+  border: 2px solid #4A154B;
+  border-radius: 10px;
+  display: flex;
+}
+
+.edit_profile_form {
+  width: 550px;
+  padding: 30px;
+  border-right: 2px solid #4A154B;
+}
+
+.edit_topic_form {
+  width: calc(100% - 550px);
+}
+
+.edit_future_topic {
+  padding: 30px;
+  border-bottom: 2px solid #4A154B;
+}
+
+.edit_past_topic {
+  padding: 30px;
+}
+
+
