--- a/app/views/characters/_main_view_edit.html.erb
+++ b/app/views/characters/_main_view_edit.html.erb
@@ -44,11 +44,9 @@
       <% end %>
 
       <div class="edit_topic_form">
-        <%= form_with model: @latest_future_topic, class: "edit_future_topic", local: true do |f| %>
-          <div class='field'>
-            話したい事<br>
-            <%= f.text_area :future_topic %>
-          </div>
+        <%= form_with model: @latest_future_topic, class: "edit_future_topic", data: @latest_future_topic.id, local: true do |f| %><%# class指定が適当になっている %>
+          話したい事<br>
+          <%= f.text_area :future_topic, class: "topic_input future_topic_input" %>
         <% end %>
 
         <div class="edit_past_topic">
@@ -56,10 +54,13 @@
             話した事<br>
           <div id="past_topics">
             <% @past_topics.each do |past_topic| %>
-              <%= form_with model: past_topic, class: "topic_form", data: past_topic.id, local: true do |f| %>
-                  <%= f.date_field :created_date %>              
-                  <%= f.text_area :past_topic, class: "past_topic_input" %>
-              <% end %>
+              <div id="past_topic_<%= past_topic.id %>">
+                <%= form_with model: past_topic, class: "topic_form", data: past_topic.id, local: true do |f| %>
+                    <%= f.date_field :created_date %>              
+                    <%= f.text_area :past_topic, class: "past_topic_input" %>
+                <% end %>
+                <button type="button" class="delete_topic_btn" data="<%= past_topic.id %>">削除</button>
+              </div>
             <% end %>
           </div>
         </div>
