characters/indexビューnewボタン追加

--- a/app/views/characters/_main_view_index.html.erb
+++ b/app/views/characters/_main_view_index.html.erb
@@ -49,6 +49,7 @@
                 <%= f.text_area :past_topic, class: "topic_input past_topic_input", disabled: true %>
               <% end %>
             <% end %>
+            <button type="button" class="index_new_topic_btn" data-character_id="<%= character.id %>">new</button>
           </div>
         </div>
       </div>
