characters/indexビューに削除ボタンを追加

--- a/app/views/characters/_main_view_index.html.erb
+++ b/app/views/characters/_main_view_index.html.erb
@@ -52,6 +52,7 @@
               <% end %>
             <% end %>
             <button type="button" class="index_new_topic_btn" data-character_id="<%= character.id %>">new</button>
+            <button type="button" class="index_delete_topic_btn" data-character_id="<%= character.id %>">削除</button>
           </div>
         </div>
       </div>
