--- a/app/views/characters/_main_view_index.html.erb
+++ b/app/views/characters/_main_view_index.html.erb
@@ -35,7 +35,7 @@
         <div class="character_topic">
           <div class="future_topic">
             <% if character.future_topics %>
-              <%# <% future_topic = character.future_topics[0] %>
+              <%= future_topic = character.future_topics[0] %>
               <%= form_with model:character.future_topics[0], url: future_topic_path(character.future_topics[0]), class: "topic_form", data: character.future_topics[0].id, local: true do |f| %>
                 <%= f.hidden_field :character_id, value: character.id %>
                 <%= f.text_area :future_topic, class: "topic_input future_topic_input" , disabled: true %>
