--- a/app/views/characters/_main_view_index.html.erb
+++ b/app/views/characters/_main_view_index.html.erb
@@ -34,9 +34,9 @@
         </div>
         <div class="character_topic">
           <div class="future_topic">
-            <% if character.future_topics %>
+            <% if character.future_topics[0] %>
               <%= future_topic = character.future_topics[0] %>
-              <%= form_with model:character.future_topics[0], url: future_topic_path(character.future_topics[0]), class: "topic_form", data: character.future_topics[0].id, local: true do |f| %>
+              <%= form_with model:future_topic, url: future_topic_path(future_topic), class: "topic_form", data: future_topic.id, local: true do |f| %>
                 <%= f.hidden_field :character_id, value: character.id %>
                 <%= f.text_area :future_topic, class: "topic_input future_topic_input" , disabled: true %>
               <% end %>
