--- a/app/views/characters/_main_view_index.html.erb
+++ b/app/views/characters/_main_view_index.html.erb
@@ -34,7 +34,7 @@
         </div>
         <div class="character_topic">
           <div class="future_topic">
-            <% if character.future_topics[0] %>
+            <% if character.future_topics[0] %><%# 何故かheroku上では[0]をつけないとエラーが出る・・・ %>
               <% future_topic = character.future_topics[0] %>
               <%= form_with model:future_topic, url: future_topic_path(future_topic), class: "topic_form", data: future_topic.id, local: true do |f| %>
                 <%= f.hidden_field :character_id, value: character.id %>
@@ -43,7 +43,7 @@
             <% end %>
           </div>
           <div class="past_topic" id="past_topic_<%= character.id %>">
-            <% if character.past_topics[0] %>
+            <% if character.past_topics[0] %><%# 上記同様・・・ %>
               <% latest_past_topic = character.past_topics.order(created_date: :DESC).order(id: :DESC)[0] %>
               <%= form_with model:latest_past_topic, url: past_topic_path(latest_past_topic), class: "topic_form", data: latest_past_topic.id, local: true do |f| %>
                 <%= f.hidden_field :character_id, value: character.id %>
