characters/indexビュー編集

--- a/app/views/characters/_side_bar.html.erb
+++ b/app/views/characters/_side_bar.html.erb
@@ -12,6 +12,8 @@
   <div>
     会社
   </div>
+  <div id="categories">
+  </div>
   <%# <% current_user.categories.each do |category| %>
     <%# <div class="category"> %>
       <%# <div class="category_name">
@@ -19,5 +21,7 @@
       <%# </div> %>
     <%# </div> %>
   <%# <% end %>
-  <button type="button" id="new_category_btn">追加</button>
+  <div id="new_category_form">
+    <button type="button" id="new_category_btn">追加</button>
+  </div>
 </div>
