ビューファイルの配置変更

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <div class="side_bar">
-    <%= render partial: "side_bar" %>
+    <%= render partial: "shared/side_bar" %>
   </div>
   <div class="main_view">
     <%= render partial: "main_view_index" %>
