--- a/app/views/characters/_main_view_character_new.html.erb
+++ b/app/views/characters/_main_view_character_new.html.erb
@@ -16,7 +16,7 @@
 
 <div class="new_character">
   <%= form_with model: @character_topic, url: characters_path,local: true do |f|%>
-    <%= render "error_messages", model: f.object %>
+    <%= render "shared/error_messages", model: f.object %>
     <div class='field'>
       名前<br>
       <%= f.text_field :name, autofocus: true %>
