--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -1,8 +1,8 @@
 <div class="wrapper">
   <div class="side_bar">
-    <%= render partial: "side_bar" %>
+    <%= render partial: "shared/side_bar" %>
   </div>
   <div class="main_view">
-    <%= render partial: "main_view_edit" %>
+    <%= render partial: "main_view_character_edit" %>
   </div>
 </div>
