ビューの修正

--- a/app/views/categories/_main_view_index.html.erb
+++ b/app/views/categories/_main_view_index.html.erb
@@ -1,10 +1,10 @@
 <div class="main_top">
   <div class="main_top_left">
     <div class="category_title">
-      <%= "会社" %>
+      全てのデータ
     </div>
     <div class="category_describe">
-      〇〇会社の同僚。２０２０年４月より〜　URL：・・・
+      全てのデータを表示
     </div>
   </div>
   <div class="main_top_right">
