categories/editビューの編集（削除ボタンの追加）

--- a/app/views/categories/_main_view_edit.html.erb
+++ b/app/views/categories/_main_view_edit.html.erb
@@ -8,6 +8,7 @@
         <%= f.text_field :describe %>
       </div>
       <%= f.submit "更新" %>
+      <%= link_to 'カテゴリ削除', category_path(@category), method: :delete, data: {confirm: "#{@category.name} カテゴリを削除してもよろしいですか？"} %>
     </div>
     <div class="main_top_right">
       <%= link_to("ログアウト", destroy_user_session_path, method: :delete) %>
