--- a/app/views/categories/_main_view_index.html.erb
+++ b/app/views/categories/_main_view_index.html.erb
@@ -29,7 +29,7 @@
           <div class="character_name"><%= character.name %></div>
           <div class="detail">
             <%= link_to("詳細編集", edit_character_path(character)) %><br>
-            <%= link_to("データ削除", character_path(character), method: :delete) %>
+            <%= link_to("データ削除", character_path(character), method: :delete, data: {confirm: "「#{character.name}」のデータを削除してもよろしいですか？"}) %>
           </div>
         </div>
         <div class="character_topic">
