--- a/app/views/shared/_side_bar.html.erb
+++ b/app/views/shared/_side_bar.html.erb
@@ -22,6 +22,6 @@
     </div>
   <% end %>
   <div id="new_category_form">
-    <button type="button" id="new_category_btn">追加</button>
+    <%= link_to "カテゴリ追加", new_category_path %>
   </div>
 </div>
