--- a/app/views/characters/_main_view_character_edit.html.erb
+++ b/app/views/characters/_main_view_character_edit.html.erb
@@ -1,7 +1,7 @@
 <div class="main_top">
   <div class="main_top_left">
     <div class="category_title">
-      新規登録
+      データ編集
     </div>
     <div class="category_describe">
       人のデータを編集してください。人のデータを編集してください。人のデータを編集してください。人のデータを編集してください。
@@ -15,16 +15,16 @@
 </div>
 <div class="main_contents">
   <div class="main_contents_wrapper">
-    <div class="edit_data">
+    <div class="edit_character">
       <%= form_with model: @character, local: true, class: "edit_profile_form" do |f|%>
         <%= render "shared/error_messages", model: f.object %>
+        <div class='image'>
+          <%= image_tag @character.image, id: "selected_character_image" %>
+          <%= f.file_field :image, id:"character_image" %>
+        </div>
         <div class='field'>
           名前<br>
           <%= f.text_field :name, autofocus: true %>
-        </div>
-        <div class='image'>
-          画像
-          <%= f.file_field :image, id:"character_image" %>
         </div>
         <div class='category'>
           カテゴリー選択
