--- a/app/views/categories/_main_view_show.html.erb
+++ b/app/views/categories/_main_view_show.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_pack_tag "indexpage-delete-topic", "indexpage-new-topic", "select-character", "update-topic" %>
+
 <div class="main_top">
   <div class="main_top_left">
     <div class="category_title">
