--- a/app/views/characters/_main_view_character_edit.html.erb
+++ b/app/views/characters/_main_view_character_edit.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_pack_tag "delete-topic", "editpage-new-topic" "select-category", "view-selected-image" %>
+
 <div class="main_top">
   <div class="main_top_left">
     <div class="category_title">
