クラス追加によるキャラクターページ処理の改修

--- a/app/views/characters/_main_view_character_new.html.erb
+++ b/app/views/characters/_main_view_character_new.html.erb
@@ -64,7 +64,7 @@
           話した事<br>
           <div id="past_topics">
             <%= f.date_field :created_date %>              
-            <%= f.text_area :past_topic, class: "past_topic_input" %>
+            <%= f.text_area :past_topic, class: "topic_input past_topic_input" %>
           </div>
         </div>
       </div>
