--- a/app/views/characters/_main_view_character_edit.html.erb
+++ b/app/views/characters/_main_view_character_edit.html.erb
@@ -71,14 +71,14 @@
         <% end %>
 
         <div class="edit_past_topic">
-          <button type="button" id="new_topic_btn" data-character_id="<%= @character.id %>">new</button>
+          <button type="button" id="new_topic_btn" data-character_id="<%= @character.id %>">新規</button>
             話した事<br>
           <div id="past_topics">
             <% @past_topics.each do |past_topic| %>
               <div id="past_topic_<%= past_topic.id %>">
                 <%= form_with model: past_topic, class: "topic_form", data: past_topic.id, local: true do |f| %>
-                    <%= f.date_field :created_date %>              
-                    <%= f.text_area :past_topic, class: "past_topic_input" %>
+                    <%= f.date_field :created_date, class: "past_topic_input past_topic_create_date" %>              
+                    <%= f.text_area :past_topic, class: "topic_input past_topic_input past_topic_text" %>
                 <% end %>
                 <button type="button" class="delete_topic_btn" data="<%= past_topic.id %>">削除</button>
               </div>
