--- a/app/views/categories/_main_view_show.html.erb
+++ b/app/views/categories/_main_view_show.html.erb
@@ -17,6 +17,11 @@
   </div>
 </div>
 
+<div class="sort_menu">
+  <%= link_to "会話日付順", category_path, class: "sort_btn #{'active' unless params[:sort]}" %>
+  <%= link_to "入力更新順", category_path(sort: "updated_at"), class: "sort_btn #{'active' if params[:sort] == "updated_at"}" %>
+</div>
+
 <div class="main_contents">
   <div class="main_contents_wrapper">
     <% @characters.each do |character| %>
