--- a/app/assets/stylesheets/characters.css
+++ b/app/assets/stylesheets/characters.css
@@ -11,11 +11,7 @@
 .side_bar {
   width: 300px;
   height: 100vh;
-  background-color: #4A154B;
-  color: #fff;
-}
-
-.side_bar a {
+  background-color: #770099;
   color: #fff;
 }
 
@@ -23,82 +19,175 @@
 /* サイドバートップ */
 
 .side_bar_top {
-  height: 100px;
+  height: 90px;
   width: 100%;
 }
 
-.main_logo {
-  margin: 20px auto;
-  width: 80%;
-  font-size: 36px;
+.main_logo_wrapper {
+  padding: 16px 0;
 }
 
 /* サイドバーコンテンツ */
 
-.side_bar_category {
-
+.side_bar_contents {
+  height: calc(100vh - 90px);
 }
 
+.new_character_btn_wrapper {
+  padding: 15px;
+}
+
+#new_character_btn {
+  width: 270px;
+  margin: 0 auto;
+  padding: 9px;
+  border-radius: 3px;
+  background-color: #fff;
+  color: #770099;
+  display: block;
+  font-size: 16px;
+}
+
+.categories {
+  height: calc(100% - 40px);
+  background: url("/images/side_bar_back.png") bottom no-repeat;
+}
+
+#category_all {
+  width: 100%;
+  padding: 7px 0 7px 24px;
+  font-size: 14px;
+  background-color: #f5f5f5;
+  color: #770099;
+  display: block;
+}
+
+.category_btn {
+  width: 100%;
+  padding: 7px 0 7px 24px;
+  font-size: 14px;
+  background-color: #770099;
+  color: #fff;
+  display: block;
+}
+
+#new_category_btn {
+  background-color: #600077;
+}
+
+.footer {
+  width: 100%;
+  height: 40px;
+  background-color: #600077;
+  display: flex;
+  align-items: center;
+}
+
+.feedback_link {
+  color: #fff;
+  font-size: 14px;
+  margin-left: 20px;
+}
+
+.copy_right {
+  margin-left: 40px;
+  font-size: 10px;
+}
 
 /* メインビュー */
 /* メイントップ */
+
 .main_top {
-  height: 100px;
-  background-color: #4A154B;
-  padding: 0 40px;
-  color: #fff;
+  height: 90px;
+  padding: 0 35px;
+  background-color: #770099;
   display: flex;
   justify-content: space-between;
 }
 
-.sort_menu {
-  padding: 8px 20px;
-  background-color: rgb(243, 243, 243);
+.main_top_data {
+  margin-top: 15px;
+  width: 680px;
+  height: 60px;
+  background-color: #600077;
+  border-radius: 3px;
+  color: #fff;
+  padding: 6px 20px;
+}
+
+.top_title {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.top_subtitle {
+  font-size: 12px;
+}
+
+.main_top_user_data {
+  display: flex;
+  align-items: center;
+}
+
+.current_user_name {
+  color: #fff;
+  margin-right: 10px;
+}
+
+.current_user_image {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 1px solid #f8e8ff;
+  background-color: #fff;
+}
+
+/* メイントップサブ */
+
+.main_top_sub {
+  padding: 7px 35px;
+  background-color: #f8e8ff;
 }
 
 .sort_btn {
+  padding: 2px 12px;
+  margin-right: 4px;
   display: inline-block;
-  background-color: #c898c9;
-  padding: 3px 10px;
-  color: #fff;
+  background-color: #fff;
+  color: #770099;
+  border-radius: 3px;
 }
 
 .active {
-  background-color: #4A154B;
-}
-
-.main_top a {
+  background-color: #770099;
   color: #fff;
 }
-
 
 
 /* メインコンテンツ */
 .main_contents {
-  padding: 20px 0 50px;
+  padding: 30px 0 50px;
   height: calc(100vh - 146px);
+  background-color: #f5f5f5;
   overflow: auto;
-  position: relative;
 }
 
-
 .main_contents_wrapper {
-  margin: 0 auto;
-  width: calc(100% - 100px);
-  /* background-color: #ddd; */
+  margin-left: 35px;
   display: flex;
   flex-wrap: wrap;
 }
 
 /* トップページ */
 .character {
-  width: 540px;
-  height: 180px;
-  display: flex;
-  border: 2px solid #4A154B;
-  border-radius: 10px;
-  margin: 0 20px 20px 0;
+  width: 510px;
+  height: 170px;
+  border: 1px solid #770099;
+  background-color: #fff;
+  border-radius: 3px;
+  margin: 0 15px 15px 0;
   transition: .1s;
+  display: flex;
 }
 
 .character:hover {
@@ -106,51 +195,92 @@
 }
 
 .select {
-  height: 380px;
+  height: 355px;
   transition: .1s;
 }
 
 .character_info {
-  width: 160px;
-  padding-top: 20px;
+  width: 155px;
+  padding-top: 22px;
   text-align: center;
-  border-right: 2px solid #4A154B;
   overflow: hidden;
+  position: relative;
 }
 
-.character_name {
-  font-weight: bold;
+.character_info::after {
+  content: "";
+  border-right: 1px solid #770099;
+  height: 125px;
+  position: absolute;
+  right: 0;
+  top: 22px;
 }
 
 .character_image img {
-  height: 100px;
-  width: 100px;
+  height: 95px;
+  width: 95px;
   border-radius: 50%;
+  border: 1px solid #f8e8ff;
+}
+
+.character_name {
+  margin-top: 3px;
+  font-weight: bold;
 }
 
 .character_topic {
   width: 380px;
   height: calc(100% - 2px);
-  font-size: 14px;
 }
 
 .future_topic {
   width: 100%;
   height: 50%;
-  padding: 7px;
-  border-bottom: 1px solid #4A154B;
+  padding: 14px 20px 8px 13px;
+  position: relative;
+}
+
+.future_topic::after {
+  content: "";
+  border: .5px dashed #770099;
+  width: 310px;
+  position: absolute;
+  bottom: -1px;
+  left: 18px;
+}
+
+.topic_type_future {
+  font-size: 12px;
+  font-weight: bold;
+  color: #770099;
+  position: absolute;
+  top: 3px;
+  right: 12px;
 }
 
 .past_topic {
   width: 100%;
   height: 50%;
-  padding: 7px;
-  border-top: 1px solid #4A154B;
+  padding: 8px 20px 14px 13px;
   position: relative;
 }
 
 .detail {
-  margin-top: 30px;
+  margin-top: 100px;
+}
+
+.character_btn {
+  padding: 5px 10px;
+  font-size: 13px;
+  background-color: #fff;
+  color: #770099;
+  border: 1px solid #770099;
+  border-radius: 20px;
+  display: inline-block;
+}
+
+.delete_character_btn {
+  margin-top: 8px;
 }
 
 .topic_form {
@@ -159,32 +289,56 @@
 }
 
 .created_date {
-  width: 95px;
-  font-size: 13px;
+  width: 82px;
+  font-size: 11px;
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 2px;
+  right: 2px;
+  border: none;
+  background-color: #fff;
 }
 
 .topic_input {
   resize: none;
-  width: 81%;
+  width: 100%;
   height: 100%;
   padding: 3px 5px;
-  font-size: 14px;
+  font-size: 12px;
+  border: none;
+  background-color: #f5f5f5;
+  border-radius: 3px;
 }
 
-.index_new_topic_btn {
+.topic_input:disabled {
+  background-color: #fff;
+  border: none;
+}
+
+.topic_type_past {
+  font-size: 12px;
+  font-weight: bold;
+  color: #770099;
   position: absolute;
-  top: 33px;
-  right: 7px;
+  bottom: 3px;
+  right: 12px;
+}
+
+.topic_btns {
+  display: none;
+  position: absolute;
+  bottom: 42px;
+  right: 35px;
+}
+
+.topic_btn {
+  display: block;
 }
 
 .index_delete_topic_btn {
-  position: absolute;
-  top: 56px;
-  right: 7px;
+  margin-top: 10px;
 }
+
+
 
 /* キャラクター登録ページ */
 .category_select_box {
