--- a/app/assets/stylesheets/characters.css
+++ b/app/assets/stylesheets/characters.css
@@ -95,6 +95,7 @@
 }
 
 /* メインビュー */
+/* トップページ */
 /* メイントップ */
 
 .main_top {
@@ -147,6 +148,8 @@
 .main_top_sub {
   padding: 7px 35px;
   background-color: #f8e8ff;
+  display: flex;
+  justify-content: space-between;
 }
 
 .sort_btn {
@@ -161,6 +164,11 @@
 .active {
   background-color: #770099;
   color: #fff;
+}
+
+.update_time {
+  margin-top: 6px;
+  font-size: 10px;
 }
 
 
@@ -178,7 +186,6 @@
   flex-wrap: wrap;
 }
 
-/* トップページ */
 .character {
   width: 510px;
   height: 170px;
@@ -338,6 +345,23 @@
   margin-top: 10px;
 }
 
+/* カテゴリページ */
+/* メイントップ */
+
+.category_data {
+  display: flex;
+  justify-content: space-between;
+}
+
+.category_data_right {
+  display: flex;
+  align-items: center;
+}
+
+.edit_category_btn {
+  font-size: 12px;
+  color: #fff;
+}
 
 
 /* キャラクター登録ページ */
@@ -358,7 +382,6 @@
 .check_btn {
   display: inline-block;
 }
-
 
 /* キャラクター編集ページ */
 
