--- a/app/views/categories/_main_view_index.html.erb
+++ b/app/views/categories/_main_view_index.html.erb
@@ -18,8 +18,15 @@
 </div>
 
 <div class="main_top_sub">
-  <%= link_to "会話日付順", root_path, class: "sort_btn #{'active' unless params[:sort]}" %>
-  <%= link_to "入力更新順", root_path(sort: "updated_at"), class: "sort_btn #{'active' if params[:sort] == "updated_at"}" %>
+  <div class="main_top_sub_left">
+    <%= link_to "会話日付順", root_path, class: "sort_btn #{'active' unless params[:sort]}" %>
+    <%= link_to "入力更新順", root_path(sort: "updated_at"), class: "sort_btn #{'active' if params[:sort] == "updated_at"}" %>
+  </div>
+  <div class="main_top_sub_right">
+    <div class="update_time">
+      自動更新
+    </div>
+  </div>
 </div>
 
 <div class="main_contents">
