--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_pack_tag "indexpage-delete-topic", "indexpage-new-topic", "select-character", "update-topic" %>
+
 <div class="wrapper">
   <div class="side_bar">
     <%= render partial: "shared/side_bar" %>
